Set the correct meetup url

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>SF Node Meetup</title>
-    <meta http-equiv="refresh" content="0; url = https://sfnode.meetup.com" />
+    <meta http-equiv="refresh" content="0; url = https://meetup.com/sfnode" />
   </head>
   <body>
     <p>
       Checkout our Meetup.com page at
-      <a href="https://sfnode.meetup.com">https://sfnode.meetup.com</a>
+      <a href="https://meetup.com/sfnode">https://meetup.com/sfnode</a>
     </p>
   </body>
 </html>
